--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 </head>
 <body>
 
+  <header></header>
+
+  <section class="hero"></section>
+
+  <section class="features"></section>
+
+  <section class="works"></section>
+
+  <section class="team"></section>
+
+  <section class="clients"></section>
+
+  <section class="download"></section>
+
+  <footer></footer>
+
   <script src="js/app.js"></script>
 </body>
 </html>
