--- a/index.html
+++ b/index.html
@@ -7,21 +7,177 @@
 </head>
 <body>
 
-  <header></header>
+  <header>
 
-  <section class="hero"></section>
+      <img src="img/header_logo.png" alt="">
+      <nav>
+          <a href="#">Features</a>
+          <a href="#">Works</a>
+          <a href="#">Our Team</a>
+          <a href="#">Testimonials</a>
+          <a href="#">Download</a>
+      </nav>
 
-  <section class="features"></section>
+  </header>
 
-  <section class="works"></section>
+  <div class="header_underscore"></div>
 
-  <section class="team"></section>
+  <section class="hero">
 
-  <section class="clients"></section>
+      <div>Your Favorite One Page Multi Purpose Template</div>
+      <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</div>
+      <button class="more_info_btn">Find Out More</button>
 
-  <section class="download"></section>
+  </section>
 
-  <footer></footer>
+  <section class="features">
+
+      <div class="single_feature">
+          <img src="img/features_logo_1.png" alt="">
+          <p>Easily Customised</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+      <div class="single_feature">
+          <img src="img/features_logo_2.png" alt="">
+          <p>Responsive REady</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+      <div class="single_feature">
+          <img src="img/features_logo_3.png" alt="">
+          <p>Modern Design</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+      <div class="single_feature">
+          <img src="img/features_logo_4.png" alt="">
+          <p>Clean Code</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+      <div class="single_feature">
+          <img src="img/features_logo_5.png" alt="">
+          <p>Ready to Ship</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+      <div class="single_feature">
+          <img src="img/features_logo_6.png" alt="">
+          <p>Download for Free</p>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+      </div>
+
+  </section>
+
+  <section class="works">
+
+      <img class="single_work" src="img/works_img_1.png" alt="">
+      <img class="single_work" src="img/works_img_2.png" alt="">
+      <div class="blank_work">
+          <p class="blank_work_name">Project Name</p>
+          <p class="blank_work_footnote">User Interface Design</p>
+      </div>
+      <img class="single_work" src="img/works_img_4.png" alt="">
+      <img class="single_work" src="img/works_img_5.png" alt="">
+      <img class="single_work" src="img/works_img_6.png" alt="">
+      <img class="single_work" src="img/works_img_7.png" alt="">
+      <img class="single_work" src="img/works_img_8.png" alt="">
+
+  </section>
+
+  <section class="team">
+
+      <div class="employee">
+          <img src="img/team_img_1.png" alt="">
+          <p class="name"></p>
+          <p class="job_title"></p>
+          <p class="employee_footnote"></p>
+          <div class="social_media">
+              <img src="img/facebook_logo.png" alt="">
+              <img src="img/twitter_logo.png" alt="">
+              <img src="img/linkedin_logo.png" alt="">
+          </div>
+      </div>
+
+      <div class="employee">
+          <img src="img/team_img_2.png" alt="">
+          <p class="name"></p>
+          <p class="job_title"></p>
+          <p class="employee_footnote"></p>
+          <div class="social_media">
+              <img src="img/facebook_logo.png" alt="">
+              <img src="img/twitter_logo.png" alt="">
+              <img src="img/linkedin_logo.png" alt="">
+          </div>
+      </div>
+
+      <div class="employee">
+          <img src="img/team_img_3.png" alt="">
+          <p class="name"></p>
+          <p class="job_title"></p>
+          <p class="employee_footnote"></p>
+          <div class="social_media">
+              <img src="img/facebook_logo.png" alt="">
+              <img src="img/twitter_logo.png" alt="">
+              <img src="img/linkedin_logo.png" alt="">
+          </div>
+      </div>
+
+      <div class="employee">
+          <img src="img/team_img_4.png" alt="">
+          <p class="name"></p>
+          <p class="job_title"></p>
+          <p class="employee_footnote"></p>
+          <div class="social_media">
+              <img src="img/facebook_logo.png" alt="">
+              <img src="img/twitter_logo.png" alt="">
+              <img src="img/linkedin_logo.png" alt="">
+          </div>
+      </div>
+
+  </section>
+
+  <section class="clients">
+
+      <img src="img/clients_img.png" alt="">
+      <div class="opinions">
+          <p class="single_opinion">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</p>
+          <p class="client_name">Susan Sims, Interaction Designer at XYZ</p>
+      </div>
+
+  </section>
+
+  <section class="download">
+
+      <p class="encouragement">Are You Ready to Start? Download Now For Free!</p>
+      <p class="encouragement_footnote">Fusce dapibus, tellus ac cursus commodo</p>
+      <button class="download_btn">Download Here</button>
+
+  </section>
+
+  <footer>
+
+      <div>
+          <p class="footer title">Location</p>
+          <p class="footer_details address">3481 Melrose Place Beverly Hills, CA 90210</p>
+      </div>
+
+      <div>
+        <p class="footer title"></p>
+        <div class="footer_logos">
+          <img src="img/footer_facebook.png" alt="">
+          <img src="img/footer_twitter.png" alt="">
+          <img src="img/footer_linkedin.png" alt="">
+        </div>
+      </div>
+
+      <div>
+          <p class="footer title"></p>
+          <p class="footer_details about"></p>
+      </div>
+
+  </footer>
 
   <script src="js/app.js"></script>
 </body>
